# aurora-drive

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/backend/: .dockerignore  .env.example  .gitignore  Makefile  api-contract.md  pyproject.toml  start.sh
apps/backend/deploy/: Dockerfile  fh6-backend.service
apps/backend/src/fh6/: main.py
apps/backend/src/fh6/application/: README.md
apps/backend/src/fh6/application/services/: coach_availability.py  coach_broker.py  derivations.py  event_emitter.py  hot_cache.py  live_broker.py  modeled_placeholder.py  retention_enforcer.py  rewind_detector.py  session_manager.py  state_emitter.py
apps/backend/src/fh6/application/use_cases/: ask_coach.py  create_telemetry_clip_replay.py  generate_insights.py  get_live_aggregate_for_car.py  get_session_detail.py  get_session_frames.py  ingest_frame.py  rebuild_driver_fingerprint.py  resume_session_on_restart.py
apps/backend/src/fh6/composition/: __init__.py  application.py  container.py  infrastructure.py  interfaces.py
apps/backend/src/fh6/domain/: README.md
apps/backend/src/fh6/domain/entities/: __init__.py  car.py  coach_callout.py  coach_insight.py  frame.py  (+6 more)
apps/backend/src/fh6/infrastructure/: README.md  config.py  logging.py
apps/backend/src/fh6/interfaces/: README.md  app.py  dependencies.py
apps/backend/src/fh6/tools/: __init__.py  openapi_dump.py  ws_schema_dump.py
apps/backend/tests/: conftest.py
apps/backend/tests/contract/: fake_repos.py  test_cars.py  test_coach.py  test_coach_qa.py  test_coach_status.py  test_driver.py  test_layouts.py  test_message_broker.py  test_no_api_key.py  test_port_range_refusal.py  test_predict.py  test_predict_shift.py  test_predict_shift_report.py  test_predict_shift_report_v2.py  test_predict_shift_reset.py  test_predict_shift_reset_v2.py  test_replay.py  test_security_audit.py  test_sessions.py  test_settings.py  test_shift_predictor_safeguards.py  test_telemetry_health.py  test_track.py  test_wire_shift_recommendation.py  test_ws_lifecycle.py  test_ws_live.py
apps/backend/tests/integration/: conftest.py  test_capture_replay_end_to_end.py  test_pg_coach_repository.py  test_pg_driver_repository.py  test_pg_layouts_repository.py  test_pg_mistakes_repository.py  test_pg_prediction_repository.py  test_pg_replay_repository.py  test_pg_track_repository.py  test_redis_broker_multi_worker.py  test_rewind_detector_e2e.py  test_rewind_detector_restart_e2e.py  test_session_frames_perf.py  test_shift_predictor_class_prior_flush.py  test_shift_predictor_e2e.py  test_shift_predictor_e2e_v2.py  test_shift_predictor_shift_event_e2e.py
apps/backend/tests/unit/: test_calibration_reliability.py  test_coach_availability.py  test_cooldown_policy.py  test_decoder_golden.py  test_derivations_analytic.py  test_engine_fingerprint.py  test_event_emitter_shift_payload.py  test_hot_cache_evict_after.py  test_hot_cache_mirror.py  test_in_memory_frame_store_rewind.py  test_lap_repository_inmem.py  test_ordinal_lookup.py  test_retention_enforcer.py  test_rewind_config.py  test_rewind_detector.py  test_session_aggregates.py  test_session_boundaries.py  test_session_close_grace.py  test_session_events_persistence.py  test_session_lap_timing.py  test_session_manager_adopt_listener.py  test_session_manager_session_started_listener.py  test_session_resume_on_restart.py  test_session_stale_sweeper.py  test_shift_bin_trainer.py  test_shift_change_point.py  test_shift_class_prior.py  test_shift_class_prior_rebuild.py  test_shift_config.py  test_shift_curve_resolver.py  test_shift_curve_resolver_downshift.py  test_shift_event_evaluator.py  test_shift_event_evaluator_downshift.py  test_shift_predictor_assist_counters.py  test_shift_predictor_downshift.py  test_shift_predictor_pending_shifts.py  test_shift_predictor_repo_inmemory.py  test_shift_predictor_repo_v2.py  test_shift_predictor_training.py  test_shift_predictor_trans_mode.py  (+9 more)
(+289 files in other folders)
